0032767: Mesh - incorrect splitting of edges of seams leading to hang [since OCCT 7.4.0]

- fix step by parameter of the edge while split curve in case of seam edges